finish the integration of one module with the serve

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,17 @@
 <html>
 <head>
 	<title>Oraculo</title>
+	<meta charset="UTF-8">
 	<style type="text/css">#{css}</style>
 </head>
-<body>
-	<desktop></desktop>
-	<h1>hola mundo</h1>
-    <script type="text/javascript" src="/external/jquery-3.3.1.min.js"></script>
+<body oncontextmenu="return false">
+    <desktop></desktop> 
+	<fileSytme></fileSytme>	
+    <script type="text/javascript" src="/external/jquery.js"></script>
     <script type="text/javascript" src="/node_modules/socket.io-client/dist/socket.io.js"></script>
     <script type="text/javascript" src="/commonModules/remoteEvent/index.js"></script>
+    <script tyepe="text/javascript">
     #{js}
+    </script>
 </body>
 </html>
