--- a/module/server/files/forbidden.html
+++ b/module/server/files/forbidden.html
@@ -23,7 +23,8 @@ h1 {
 </head>
 <body>
 <section>
-<h1>Sorry, but we can't server your request</h1>
+<h1>Error 403</h1>
+<h2>Sorry, but we can't serve your request</h2>
 <article>
 <h3 hidden="true">Propuse</h3>
 <p>Why do you don't ask again for another page</p>
