Allow the comunication by websocket on the form make the form modal start the desktop interaction wireframe start the mongodb bbdbb fix some bugs on loadapp module

--- a/module/desktop/public/index.html
+++ b/module/desktop/public/index.html
@@ -1,1 +1,16 @@
-Esto es el dekstop
+<nav id="sideBar" class="bar">
+	<ul class="slide">
+		<li>file1</li>
+		<li>file2</li>
+		<li>file3</li>
+		<li>file4</li>
+		<li>file5</li>
+		<li>file6</li>
+		<li>file7</li>
+	</ul>
+</nav>
+<nav id="downBar">
+	<ul class="slide">
+		<li>fileSystem</li>
+	</ul>
+</nav>
