--- a/module/server/files/forbidden.html
+++ b/module/server/files/forbidden.html
@@ -16,15 +16,14 @@ section {
 	height: 100vh;
 	flex-direction: column;
 }
-h1 {
-	font-size: 24pt;
-}
+h1 {font-size: 36pt;}
+h2 {font-size: 36pt;}
 </style>
 </head>
 <body>
 <section>
 <h1>Error 403</h1>
-<h2>Sorry, but we can't serve your request</h2>
+<h2>Sorry, but I can't serve your request</h2>
 <article>
 <h3 hidden="true">Propuse</h3>
 <p>Why do you don't ask again for another page</p>
