--- a/public/index.html
+++ b/public/index.html
@@ -8,14 +8,13 @@
 <body oncontextmenu="return false">
     <login></login>
     <desktop></desktop> 
-    <fileSytme></fileSytme>	
-    <script type="text/javascript" src="/external/jquery.js"></script>
+    <filesystem></filesystem>	
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://vuejs.org/js/vue.js"></script>
     <script type="text/javascript" src="/node_modules/socket.io-client/dist/socket.io.js"></script>
     <script type="text/javascript" src="/commonModules/remoteEvent/client.js"></script>
     <script type="text/javascript">
-    #{js}
-
-var comunication = new Client(external);
+    #{js} var comunication = new Client(external); 
     </script>
 </body>
 </html>
