Allow to change the image of background and minify the filesytem them Allow to load external html with the plugins Clean the modal/index.js file Create new method to mongoDB library to allow update values on the bbdd Adap the topbar of filesystem to vue's library

--- a/module/filesystem/public/index.html
+++ b/module/filesystem/public/index.html
@@ -1,5 +1,7 @@
 <ul class="topBar">
     <li class="track">Carpeta personal</li>
+	<li v-for="location in currentPath">{{location}}</li>
+
 </ul>
 <ul class="frecuentFile">
     <li>Recientes</li>
