--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<title>Oraculo</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="/public/css/style.css">
+	<link rel="icon" href="/common/demo_icon.gif" type="image/gif" sizes="16x16">
 	<style type="text/css">#{css}</style>
 </head>
 <body oncontextmenu="return false">
