fix the bug that it's generate with the previous identifiqued. Now the cookie is created at the first time the user get access to the app and is created a session var with the identificator. On the front-end,the cookie containt  only the time of the firt request to the server. For get access to all instances, on the server is necesary add the ip of the client+the _id key of its cookies split with _.

--- a/module/filesystem/public/index.html
+++ b/module/filesystem/public/index.html
@@ -4,6 +4,7 @@
 </ul>
 <ul id="options" class="topBar">
 	<li id="newFolder">
+		<img src="common/images/download.svg" alt="Descargar">
 		<img src="common/images/createFolder.svg" alt="Nueva carpeta">
 	</li>
 </ul>
