--- a/module/filesystem/public/index.html
+++ b/module/filesystem/public/index.html
@@ -4,8 +4,10 @@
 </ul>
 <ul id="options" class="topBar">
 	<li id="newFolder">
-		<img src="common/images/download.svg" alt="Descargar">
 		<img src="common/images/createFolder.svg" alt="Nueva carpeta">
+	</li>
+	<li id="download">
+		<img src="common/images/download.svg" alt="Descargar">
 	</li>
 </ul>
 <ul class="frecuentFile">
