Create the module chat. It permit to search a user for make a new chat. Don't create it yet

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <login></login>
     <desktop></desktop> 
     <filesystem></filesystem>	
+    <chat></chat>
 	<div id="contextMenu" class="shadow" v-bind:style="style">
 		<nav> <ul>
 			<li v-for="option in options"><span @click="d(option.func)">{{option.txt}}</span></li>
