Integrate the chat with the rest of the app and make some scss changes

--- a/module/desktop/public/index.html
+++ b/module/desktop/public/index.html
@@ -1,5 +1,5 @@
 <nav id="sideBar" class="bar">
-	<ul class="slide">
+	<nav class="slide">
 		<li>file1</li>
 		<li>file2</li>
 		<li>file3</li>
@@ -7,10 +7,11 @@
 		<li>file5</li>
 		<li>file6</li>
 		<li>file7</li>
-	</ul>
+	</nav>
 </nav>
 <nav id="downBar">
-	<ul class="slide">
+	<nav class="slide">
 		<li>fileSystem</li>
-	</ul>
+		<li>chat</li>
+	</nav>
 </nav>
