include the properties menu to the filesystem fix the bug on the coneccion at the filesystem module Adapt the load of external resources to make it more flexible and elegant. Now is load a external file, the content of it is not include direct on the dom as pass before Now the trash folder is create at the same time that the user is register

--- a/module/filesystem/external/properties/index.html
+++ b/module/filesystem/external/properties/index.html
@@ -3,7 +3,7 @@
     <ul class="cat1">
         <li>Básico</li>
         <li>Fechas</li>
-        <li>Permisos</li>
+        <!-- <li>Permisos</li> -->
     </ul>
 </nav>
 <main class="cat1">
@@ -39,6 +39,7 @@
 			<span>#{birthdate}</span>
         </span>
     </section>
+    <!--
     <section id="permission">
         <span class="group">
 			<p class="category">Value</p>
@@ -97,7 +98,7 @@
 			<input type="number" value="#{permission[1]}" max="7" min="0">
 		</span>
         <span class="group"><button id="confirm">Confirmar</button></span>
-    </section>
+    </section>-->
 </main>
 </div>
 <script type="text/javascript" src="./js/main.js"></script>
