Prepare the interafe to allow move the inside apps over the window. Allow to move the insides apps. Prepare to resize the windows'app

--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,6 @@
 	<script type="text/javascript" src="/node_modules/socket.io-client/dist/socket.io.js"></script>
 	<script type="text/javascript" src="/commonModules/communication/client.js"></script>
 	<script type="text/javascript" src="/commonModules/modal/client.js"></script>
+	<script type="text/javascript" src="/commonModules/interaction/client.js"></script>
 </body>
 </html>
