--- a/module/server/files/forbidden.html
+++ b/module/server/files/forbidden.html
@@ -18,6 +18,7 @@ section {
 }
 h1 {font-size: 36pt;}
 h2 {font-size: 36pt;}
+p{text-align: center;}
 </style>
 </head>
 <body>
@@ -26,7 +27,7 @@ h2 {font-size: 36pt;}
 <h2>Sorry, but I can't serve your request</h2>
 <article>
 <h3 hidden="true">Propuse</h3>
-<p>Why do you don't ask again for another page</p>
+<p>Why do you don't ask again for another page?</p>
 </article>
 </section>
 </body>
