Allow to change and show the profile picture on the desktop and on the chat; Insert the home menu Fix some animations bugs

--- a/module/desktop/public/index.html
+++ b/module/desktop/public/index.html
@@ -9,8 +9,23 @@
 		<li>file7</li>
 	</nav>
 </nav>
+<div id="menu">
+	<div id="options">
+		<div id="profilePicture"></div>
+		<div id="settings">
+			<nav>
+				<li>perfil</li>
+				<li>apariencia</li>
+				<li>apagar</li>
+			</nav>
+		</div>
+	</div>
+</div>
 <nav id="downBar">
 	<nav class="slide">
+	<div id="home">
+		<p>home</home>
+	</div>
 		<li>fileSystem</li>
 		<li>chat</li>
 	</nav>
