add the call of the methot that allo to dont show the plugins when it is close (it ocure when some elements can be minimy correctly add the method to loadapp on backend that allow to add some dinamic vars on the init function (it is thinking to the vars necesary with the plugins change the method that is called when some app is called and is received the data. It method will be change because, sometimes, not be necesary the back-end interaction addapt the modal back-end to send to tge front-end who modules was ask before Add the condional render with vue to the extra html from selectfile

--- a/commonModules/selectfile/selectfile.html
+++ b/commonModules/selectfile/selectfile.html
@@ -1,4 +1,4 @@
-<footer id="selectFile">
+<footer id="selectFile" v-if="selectfile">
 	<form>
 		<p>ruta:</p>
 		<input type="text" name="path" v-bind:value="currentPath.join('/')">
