Update the document that show, more or less,  the database structure The module modal now have a method that create the headers of the modals Adapt the modal client to be called by others modules and remove some console.log Adapt the mongDB module to allow insert more properties that $set to the update's method Remove the line that save the picture when is search people into the chat module Fix some css on the properties modal, add the class 'menu' to the content of that moduele and remove some coments to the main script Allow to share files on the module filesystem and adapt it to read symlink. Some features don't work with this type of inode. The solution will be the same for all it Adapt the filesystem to share files and folders Create all the init folders when user is sing up Make better the sing up process. Now the client only send to the server the fields with data and exclude the second password Remove some logs from the server file

--- a/module/filesystem/external/properties/index.html
+++ b/module/filesystem/external/properties/index.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="./css/style.css">
-<nav>
+<nav class="menus">
     <ul class="cat1">
         <li>Básico</li>
         <li>Fechas</li>
