Get the realPath for all symbolink link type file on the filesystem module Make the index page with the interaction and the style. Is missing to make it responsive on the module login Add some npm run's and a package of the package.json Add a real favicon to the index page and the meta tag to view it responsive Change some general css to adapt the app to the real apareance of it

--- a/module/login/public/index.html
+++ b/module/login/public/index.html
@@ -1,14 +1,40 @@
-<div id="root">
-<form action="someplace" method="post" id="newUser" v-if="action==='newUser'">
-	<h1> Sing up</h1>
-	<input v-for="input in newUser" :name="input.name" :id="input.name" :placeholder="input.placeholder" :type="input.type" :pattern="input.pattern" :required="input.required">
-	<p> No tienes cuenta aún? puedes crear una ahora mismo! solo clicka en <a href="#" @click="changeAction">crear cuenta</a>
+<div id="root" v-bind:class="{login: current==0, help: current==2, info: current==1}">
+<header :class=moduleClass>
+	<span id="logo">DELFHOS</span>
+	<nav>
+		<li v-for="o, i in options" @click="goToSection(i)">{{o}}</li>
+	</nav>
+</header>
+<main v-bind:style="mainStyle">
+<section id="form" v-bind:class="{active: current===0,next: next===0 }">
+	<h1>{{title[action]}}</h1>
+<form action="someplace" method="post" id="newUser" :style="styleObjectForm">
+	<span v-for="input in form[action]">
+		<p>{{input.placeholder}}</p>
+		<input  :name="input.name" :id="input.name" :type="input.type" :pattern="input.pattern" :required="input.required" :value="input.value" :class="input.class">
+	</span>
 	<p v-if="passwordSecurity.length>=1">La calidad de tu contraseña es: {{passwordSecurity}}</p>
 </form>
-<form action="someplace" method="post" id="login" v-if="action==='login'">
-	<h1> Login</h1>
-	<input v-for="input in login" :name="input.name" :placeholder="input.placeholder" :type="input.type" >
-	<p> No tienes cuenta aún? puedes crear una ahora mismo! solo clicka en <a href="#" @click="changeAction">crear cuenta</a>
-</form>
+<div id="buttons" v-if="action === 'newUser'">
+	<div @click="goTo(true)" v-bind:class="{invisible:marginForms<1}"><svg viewBox="0 0 100 100"><path d="M20 50 L60 90 L60 70 L90 70 " fill="none"/></svg></div>
+	<div @click="goTo(false)" v-bind:class="{invisible:totalScreen===marginForms}"><svg viewBox="0 0 100 100"><path d="M10 30 L40 30 L40 10 L 80 50 " fill="none"/></svg></div>
+</div>
+<p>{{changeForm[action][0]}}<a href="#" @click="changeAction">{{changeForm[action][1]}}</a>
 <p>{{message}}</p>
+</section>
+<section id="info" v-bind:class="{active:current==1, next: next==1}">
+	<article class="main">
+		Delfhos consiste en una aplicación que pretende crear una comunidad de personas con un nexo en común, los estudios. Delfhos intenta reunir a estudiantes y trabajadores de temprana edad en un entorno donde resulte sencillo crear un espacio de trabajo productivo.
+	</article>
+	<article>
+		<p>Desde la llegada de internet y, en concreto, de la web 2.0 el proceso de compartir información entre los distintos usuarios que circulan por el universo casi <i>matrixiano</i> de internet se ha ido volviendo más y más sencillo. No tardó en aparecer "La nube" un espacio que "¿Dónde está?", "¿Quién lo gestiona?", "¿Qué ocurre con nuestros archivos?" Sólo sabemos que los "subimos" y los podemos descargar en cualquier punto. </p>
+		<p>Las politicas de transparencia impuestas a las empresas que ofrecen estos servicio han ido facilitando saber que ocurre con nuestros datos al usar dichos entornos de trabajo, generando una nueva pregunta "¿Y si no me interesa vender tan barata mi privacidad?"</p>
+<p>Delfhos se crea como una alternativa más, completamente transparente, dejando a los usuairos ver que ocurre dentro de la aplicación, que pasa con sus datos e incluso proponer cosas o ¡integrarlas directamente!</p>
+	</article>
+</section>
+<section id="help" v-bind:class="{active:current==2, next:next==2}">
+	<article> <p>Dado el caracter comunitario de la aplicación, y que toma como modelo la comunidad que se genera con el movimeitno "Gnu linux", se plantean varias formas de colaborar siguiendo el modelo que dicha comunidad mantiene<p> <p>Si te gusta el desarrollo y te sientes cómodo programando, puedes resolver "<i>issues</i>" o añadir alguna subaplicación al resto. Te animamos a reunir a un equipo y  desarrollar algún programa más, que andamos un poco escasos 😉</p> <p>En caso de no ser un poco "friki" y que no te mole eso de pasarte sentado en una silla horas picando códigos sin sentido...😴  siempre puedes proponer ideas, y decir fallos y/o mejoras que te gustarian como usuario.</p> <p>Ya para acabar, siempre puedes donar algo de dinero para el mantenimiento del sitio. Recueda que no comercializamos con tus datos ni mostramos publicicad. Nuestra principal fuente de ingresos sois vosotros 😅 </p>
+	</article>
+</section>
+</main>
 </div>
