--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 	<title>Delfos</title>
 	<meta charset="UTF-8">
 	<link rel="stylesheet" type="text/css" href="/public/css/style.css">
-	<link rel="icon" href="/common/demo_icon.gif" type="image/gif" sizes="16x16">
+	<link rel="icon" href="/common/demo_icon.png" type="image/gif" sizes="16x16">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	#{css}
 </head>
 <body oncontextmenu="return false">
