Apdate the headder bar width the correct icons Show the number of chat that have messages without read. to make it, its necessary save if a messages is readding or not. Changes on the front and on the back Add a class to some icons as of the filesystem on the desktop front-end Fix some bugs on the filesystem's back-end Add the icons of the files type when it is necessary Make the front-end available to render the differents type of icons in function of the file type Add the styles of the chat's app. It is not finish yet Add some styles of the filesystem's app Add some styles more

--- a/module/desktop/public/index.html
+++ b/module/desktop/public/index.html
@@ -13,7 +13,7 @@
 		</div>
 	<nav id="programsList">
 		<li id="filesystem">
-			<svg viewBox="0 0 2000 2000">
+			<svg viewBox="0 0 2000 2000" class="filesystem">
 				<circle r="1000" cx="1000" cy="1000" class="light" />
 		                <polyline class="dark" points="1677.8,584.1 1100.6,1583.9 437.3,1583.1 436.8,332.7 700.9,333.7 844.9,583.1"/>
                			<text transform="matrix(0.7243 -1.2545 0.866 0.5 1114.6731 1543.0304)" class="light" font-size="100">FILE SYSTEM</text>
