--- a/module/chat/public/index.html
+++ b/module/chat/public/index.html
@@ -1,25 +1,32 @@
 <div class="header">
-	<div id="user">
-	    <img src="%profilePicture%">
-	    <p>{{userName}}</p>
-	</div>
-	<div id="search">
-	    <input type="text" id="search" placeholder="userNick" v-model="nick" @keyup="searchUser">
-	    <nav>
-	        <li v-for="chat in searchChats" @click="openChat(chat.user)">
-	            <img class="profilePhoto" :src="'profile/'+chat.user" :alt="chat.user+' photo'">
-	            <span>{{chat.user}}</span>
-	        </li>
-	    </nav>
-	</div>
+	<span id="search">
+		<div id="button" @click="startSearch">
+			<svg viewBox="0 0 100 100">
+				<circle cx="50" cy="50" r="50" class="contorn" />
+				<circle cx="70" cy="30" r="10" class="loupe" />
+			</svg> 
+		</div>
+		<input type="text" placeholder="userNick" v-model="nick" @keyup="searchUser"  v-bind:class={close:!isSearching}>
+	</span>
+	<nav id="listSearchUser">
+		<li v-for="chat in searchChats" @click="openChat(chat.user)" class="chatData">
+			<img class="profilePhoto" :src="'profile/'+chat.user" :alt="chat.user+' photo'">
+			<span>{{chat.user}}</span>
+		</li>
+	</nav>
 </div>
-<nav id="chats">
+<nav id="chats" v-bind:class="{hidden: chat}">
 	<li v-for="chat in chats" @click="openChat(chat.user)">
 		<img class="profilePhoto" :src="'profile/'+chat.user">
-		<span>{{chat.user}}</span>
+		<p>{{chat.user}}</p><span>{{chat.number}}</span>
 	</li>
+	<nav id="sideMenu" @click="showChats"><span>{{chatPending}}</span> <svg viewBox="0 0 100 100"> <path d="M10 40 L60 40 L60 10 L90 50 L60 90 L60 60 L3 60"> </svg> </nav>
 </nav>
 <main v-if=chat>
+	<div class="chatData">
+		<img :src="'profile/'+activeChat">
+		<p>{{activeChat}}</p>
+	</div>
 	<div id="chatArea">
 		<div v-for="message in messages" :class="{own : message.own}">
 			<span class="message">
